--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,12 @@
             <artifactId>hadoop-client</artifactId>
             <version>2.6.0</version>
         </dependency>
-
-
+        <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.47</version>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
